pre-1.8.0
    Bug Fixes:
     - Reports now generate properly quoted csv when saved

    New Features:
     - BookBrowser can now link javascripts similarly to how it links stylesheets
     

Sigil-1.7.0
    Bug Fixes
     - Workaround to ensure the Saved Searches Controls editor widget is movable on all platforms
     - Make the External Xhtml Editor Button/Feature work with both PageEdit and non-PageEdit editors again
     - Fix Preview sync when CV transitions from xhtml to css and back to xhtml
     - Fix Preview sync when Find and Replace opens new tab with search target
     - Fix Preview sync when Validation error clicked on
     - Fix Preview sync when mathml is being used (compensate for mathjax changes)
     - Fix mathml use when external MathJax directory is specified in builds on Linux
     - Prevent Sigil from loading any manifested mimtype file from bad epubs, give load warning
     - Make Spellcheck dialog use double-click to control search in CV, to speed paging word list.
     - Prevent duplicate translated semantic names
     - Fix heading tool issues after self-closed BLOCK tags
     - Prevent stack overflow crashes in pcre lib due to recursion with some valid regex
     - Fix second window opening on macOS when first launching app with file
     - Remove [other.] semantic indicators for epub2
     - Fix crash in CSS Selectors Report when using Filters

    New Features:
     - added Find Replace Regular Expression validator
     - added SIGIL_DISABLE_VERSION_META environment variable to control writing of Sigil Version
     - enable JIT compiler for pcre library to improve regex look-up performance
     - update the pcre library to version 8.45 (Final EOL)


Sigil-1.6.0
    Bug Fixes:
     - add Qt workaround for restoring Sigil window sizes when FindReplace left open on macOS
     - add missing tr() calls to the tooltips in the Special Character selection dialog